# outlines-core

./: .gitignore  .pre-commit-config.yaml  .python-version  Cargo.toml  INDEX_BINARY_FORMAT.md  Makefile  README.md  flake.nix  pyproject.toml  rustfmt.toml  setup.py  shell.nix  test.py
.github/scripts/: cargo_version_bumper.py
.github/workflows/: benchmark-rust.yaml  benchmarks.yml  build_wheels.yml  release_pypi.yaml  release_rust.yaml  tests.yml
bench/: benchmark_results.json
benchmarks/: asv.conf.json  bench_index_variant.py  bench_indexes.py  bench_kernels.py  bench_mask_guide.py  bench_mask_write.py  bench_regex_guide.py  bench_schema_guide.py  bench_torch_e2e.py  bench_write_mask.py  criterion.rs  test_index_time.py
bindings/python/: Cargo.toml  pyproject.toml  setup.cfg  setup.py
bindings/python/py_src/outlines_core/: __init__.py
bindings/python/src/: guide.rs  index.rs  lib.rs  vocabulary.rs
outlines/fsm/: guide.py
outlines/generate/: fsm.py
outlines_core/: __init__.py
outlines_core/kernels/: mlx.py  numpy.py
python/outlines_core/: __init__.py  outlines_core_rs.pyi  utils.py
src/: error.rs  index.rs  json_schema.rs  lib.rs  prelude.rs  regex.rs  v2_index.rs
src/benchmarks/: bench_indexes.rs  mod.rs
src/graphql/: error.rs  mod.rs  parsing.rs  types.rs
src/index/: compressed.rs  compressed_index.README  mod.rs  standard.rs  test_bench_index_variant.rs  test_bench_memory.rs  test_index_comparison.rs
src/json_schema/: mod.rs  parsing.rs  types.rs
src/python_bindings/: mod.rs
src/tokens_dfa/: README.md  mod.rs  reduce.rs  regex.rs  token_classes.rs  token_classes_graph.rs  (+1 more)
tests/: test_guide.py  test_index.py  test_kernels.py  test_statistical.py  test_vocabulary.py
tools/: index_player.html
(+20 files in other folders)
