[package]
name = "outlines-core-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "outlines_core_rs"
crate-type = ["cdylib"]

[dependencies]
regex-automata = "0.4.7"
pyo3 = { version = "0.22.0", features = ["extension-module"], optional=true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[features]
python-bindings = ["pyo3"]
