[package]
name = "outlines-core"
version = "0.0.0"
edition = "2021"
description = "Structured Generation"
license = "Apache-2.0"
repository = "https://github.com/dottxt-ai/outlines-core"
rust-version = "1.71.1"

[dependencies]

[features]

[lib]
name = "outlines_core"

[profile.release]
opt-level = 2
lto = false
codegen-units = 10
strip = true
panic = 'abort'

[[bench]]
path = "benchmarks/criterion.rs"
name = "criterion"
harness = false

[dev-dependencies]
criterion = "0.5.1"
