[package]
name = "outlines-core-python"
version = "0.0.0"
edition = "2021"
description = "Structured Generation"
license = "Apache-2.0"

[lib]
name = "outlines_core"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.20"
pyo3 = { version = "0.22.0", features = ["extension-module"]}
serde_json = { version = "1.0", features = ["preserve_order"] }
#serde = {version = "1.0", features = ["derive"]}
bincode = "2.0.0-rc.3"

[dependencies.outlines-core]
path = "../.."

[package.metadata.scripts]
build-python-extension = "python setup.py build_rust --inplace --debug"
build-python-extension-release = "python setup.py build_rust --inplace --release"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
